--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -169,6 +169,7 @@ version={4.0},
 \newcommand{\Kn}{\K^n}
 \newcommand{\Knn}{\K^{n \times n}}
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\Q}{\mathbb{Q}}
 
 % Unit vectors
 \newcommand{\kmath}{k}
