--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -123,7 +123,15 @@ ont le même cardinal s'il existe une bijection entre eux.
 	Un ensemble est énumérable ou dénombrable s'il est fini ou s'il a le même cardinal que $\N$. \\
 \end{mydef}
 
-De manière intuitive, un ensemble est énumérable s'il existe une liste de ses éléments.  Cette liste doit contenir tous les éléments.
+Une autre manière plus intuitive de voir si un un ensemble infini est  énumérable est de voir s'il existe une énumération de ses éléments.
+
+\begin{myprop} 
+Un ensemble infini $E$ est énumérable s'il existe une liste de ses éléments  
+\[
+e_0, e_1, e_2, \ldots , e_n, \ldots
+\]
+Cette liste doit contenir tous les éléments de cet ensemble, sans répétition.  La bijection est alors la fonction $f(i) = e_i$.  
+\end{myprop}
 
 \subsection{Exemples}
 \label{subsec:exemples}
@@ -177,10 +185,10 @@ De manière intuitive, un ensemble est énumérable s'il existe une liste de ses
 \begin{myexem}  
   L'ensemble des sous-ensembles finis d'entiers
   \begin{proof}
-  On peut également trouver une bijection entre $\N$ et l'ensemble des sous-ensembles finis d'entiers si l'on prend, par exemple, le sous ensemble de taille 2, qui est énumérable (voir démonstration de l'exemple 8). Le principe reste le même pour des sous-ensembles de taille 3, 4, 5, 6,... On peut alors créer un tableau reprenant tous les sous-ensemble finis possibles et dans lequel chaque ligne a un nombre infini de sous-ensemble d'entiers de taille $n$. Ces ensembles sont en bijection avec les naturels ($\mathbb{N}$).
+  On peut également trouver une bijection entre $\N$ et l'ensemble des sous-ensembles finis d'entiers si l'on prend, par exemple, le sous ensemble de taille 2, qui est énumérable (voir démonstration de l'exemple 8). Le principe reste le même pour des sous-ensembles de taille 3, 4, 5, 6,... On peut alors créer un tableau reprenant tous les sous-ensemble finis possibles et dans lequel chaque ligne a un nombre infini de sous-ensemble d'entiers de taille $n$. Ces ensembles sont en bijection avec les naturels ($\N$).
   
     \begin{tabular}{ l c c  c  c c c  c }
- 	 $\mathbb{N}$ & 0 & 1 & 2  & 3 & 4 & 5 & 6  \\
+ 	 $\N$ & 0 & 1 & 2  & 3 & 4 & 5 & 6  \\
  	 sous-ensembles  taille 0  & {} & {} & {} & {} & {} & {}  & $\cdots$ \\
  	 sous-ensembles  taille 1  & {0} & {1} & {2} & {3} & {4} & {5} & $\cdots$ \\
  	 sous-ensembles  taille 2  & {0,0} & {1,0} & {0,1} & {0,2} & {2,0} & {1,2}  & $\cdots$ \\
@@ -217,29 +225,34 @@ De manière intuitive, un ensemble est énumérable s'il existe une liste de ses
 \begin{myprop}
 	Tout sous-ensemble d'un ensemble énumérable est énumérable.
 	\begin{proof}
-		Soit $A$ un ensemble énumérable et $f$ une bijection dans $A\rightarrow N$. Soit $B$ un sous-ensemble de $A$ et $f|_B$ la restriction de $f$ à $B$. On regarde l'image de $f|_B$. C'est un sous-ensemble de $C$ de $\N$. 
-		
-		Si cet ensemble est borné alors il existe $n$ tel que $\forall x \in B, f(b) < n$ et donc $f|_B$ est une injection de $B$ dans $[0,n[$ et par conséquent $B$ est fini. 
-		
-		Dans le cas contraire, on sait que pour tout $n\in\N$, il existe $x\in B$ tel que $n\leq f(x)$. A chaque $n$ on peut donc associer $h(n)$ le plus petit $k\in\N$ tel que $f^{-1}(k)\in B$.
+Soit $A$ un sous-ensemble (infini) d'un ensemble $E$ énumérable.  Comme $E$ est énumérable, il existe une énumération de ses éléments
+\[
+e_0, e_1, \ldots , e_n, \ldots
+\]
+Enlevons de cette liste les éléments qui ne sont pas dans $A$.  On obtient une nouvelle liste qui énumère les éléments de $A$.
 	\end{proof}
 \end{myprop}
 
 \begin{myprop}
 	L'union et l'intersection de deux ensembles énumérables sont énumérables.
 	\begin{proof}
-		On se donne un ensemble d'ensembles $X$. On suppose que cet ensemble est énumérable, c'est-à-dire que l'on peut énumérer les éléments de $X:X_0,X_1,\ldots$ De plus chaque ensemble $X_i$ est énumérable, soit $f_i$ la bijection associée. 
-		
-		A chaque élément $x\in\cup X$ on associe le couple $(i,f_i(x))$ avec $i$ le plus petit entier tel que $x\in X_i$. On vérifie que cette application est injective de $\cup X$ dans $\N\times\N$. C'est donc une bijection de $\cup X$ dans un sous-ensemble de $\N\times\N$. L'ensemble $\cup X$ est donc fini ou énumérable. 
-		
-		Comme cet ensemble contient $X_0$ qui est infini énumérable, on en déduit que $\cup X$ est énumérable.
+		Soit $A$ et $B$ deux ensembles énumérables.  Leur intersection est énumérable car elle est un sous-ensemble de $A$.   Les éléments des ensembles $A$ et $B$ peuvent être listés
+\[
+A = \{ a_0, a_1, \ldots , a_n, \ldots\}  
+B = \{ b_0, b_1, \ldots , b_n, \ldots\} 
+\]
+Les éléments de $A \cup B$ peuvent être également listés 
+\[
+a_0, b_0, a_1, b_1, \ldots, a_n, b_n, \ldots
+\]
+en y retirant ensuite les doublons.
 	\end{proof}
 \end{myprop}
 
 \begin{myprop}
 	L'union d'une infinité énumérable d'ensembles énumérables est énumérable.
     \begin{proof}
-      La démonstration est similaire à la démonstration de l'énumérabilité de $\mathbb{Q}$.
+      La démonstration est similaire à la démonstration de l'énumérabilité de $\Q$.
       On met chaque ensemble en ligne, il y a un nombre énumérable de lignes qu'on peut numéroter en parcourant le tableau en zigzag
       en partant de $(0,0)$.
     \end{proof}
