https://github.com/UCL-INGI/LINGI1123-Calculabilite/issues/22
Diagramme structure des fonctions et ensembles (Ch 03.6)

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -419,8 +419,12 @@ K.
 	$\stcomp{K}$ n'est pas récursivement énumérable
 \end{myprop}
 
-Voir schéma sur les fonctions et ensembles dans le cours.
-%TODO insérer le schéma sur les fonctions et les ensembles
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.57\textwidth]{Images/Structures_de_fonctions_et_ensembles}
+  \caption{ Structures de fonctions et ensembles}
+  \label{rb}
+\end{figure}
 
 %\begin{mydef}[Un ensemble co-récursivement énumérable] est un ensemble dont le complément est récursivement énumérable. Par exemple $stcomp{HALT}$. On peut en déduire que si un ensemble est récursivement énumérable et co-récursivement 	énumérable alors il est récursif.
 %\end{mydef} % déjà défini plus haut.
