Uniformisation et légères corrections + Image en tikz.

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -421,8 +421,32 @@ K.
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.57\textwidth]{Images/Structures_de_fonctions_et_ensembles}
-  \caption{ Structures de fonctions et ensembles}
+  \begin{tikzpicture}[scale=0.6]
+	  %Partie de gauche
+	  \draw[red]  (0,5)  node[above] {Fonctions};
+  	  \draw[very thick, red] \ellipse{0,0}{3}{5};
+  	  \draw[blue]  (1,2)  node[above] {Fonctions};
+  	  \draw[blue]  (1,1.8)  node {calculables};
+  	  \draw[very thick,blue] \ellipse{1,-1}{1.5}{2.5};
+  	  \draw (-1.5,0) node {$\bullet$};
+  	  \draw (-1.5,0) node[above] {$halt$};
+  	  
+  	  %Partie de droite
+  	  \draw[red]  (7,5)  node[above] {Ensembles};
+  	  \draw[very thick, red] \ellipse{7,0}{3}{5};
+  	  \draw[blue]  (7.5,3.5)  node[above] {Récursifs};
+  	  \draw[blue]  (7.5,3.3)  node {énumérables};
+  	  \draw[very thick,blue] \ellipse{7.5,-0.5}{2}{3.5};
+  	  \draw[cyan] (8,0.5) node[above] {Récursifs};
+  	  \draw[very thick, cyan] \ellipse{8,-1}{1}{1.5};
+  	  \draw (4.8,0) node {$\bullet$};
+  	  \draw (4.8,0) node[above] {$\overline{K}$};
+  	  \draw (6.5,-1) node {$\bullet$};
+  	  \draw (6.5,-1) node[left] {$K$};
+  	  \draw (7.5,1.5) node {$\bullet$};
+  	  \draw (7.5,1.5) node[above] {$HALT$};
+  \end{tikzpicture}
+  \caption{Structures de fonctions et ensembles}
   \label{rb}
 \end{figure}
 
