--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -106,6 +106,9 @@ version={4.0},
 %-----------------------------
 %Nouvelles commandes
 
+\newcommand{\ellipse}[3]% center, xdim, ydim
+{(#1) ellipse (#2 and #3)}
+
 \setlist[itemize]{topsep=3pt,after=\vspace{.5\baselineskip}}
 
 \setlength{\parskip}{2mm}
