--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -71,11 +71,13 @@ version={4.0},
 
 %Configuration de listings
 \lstset{
-	language=Java,
+	language=Oz,
 	numbers=left,
 	numberstyle=\tiny\color{gray},
 	basicstyle=\rm\small\ttfamily,
-	keywordstyle=\bfseries\color{dkred},
+	morekeywords=[2]{while,do},
+	keywordstyle={\bfseries\color{dkred}},
+	keywordstyle=[2]{\bfseries\color{mymauve}},
 	frame=single,
 	commentstyle=\color{gray}=small,
 	stringstyle=\color{dkred},
